[package]
name = "pr6"
version = "0.1.0"
edition = "2024"

[dependencies]
   chrono = { version = "0.4", features = ["serde"] }
   humantime-serde = "1.1"
   serde = { version = "1.0", features = ["derive"]}
   serde_json = "1.0"
   serde_yaml = "0.9"
   toml = "0.8"
   url = { version = "2.5", features = ["serde"] }
   uuid = { version = "1.11", features = ["serde"] }
